ajuste en seguridad y agrego clientes
